src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | OCStmt ';'
  38       | GuardedStmt

  39  GuardedStmt : IF '{' IfBranchList '}'

  40  IfBranchList : IfBranchList IF_DIV IfBranch
  41               | IfBranch
  42               |

  43  IfBranch : Expr ':' Stmt

  44  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  45  SimpleStmt : LValue '=' Expr
  46             | Call
  47             |

  48  Receiver : Expr '.'
  49           |

  50  LValue : Receiver IDENTIFIER
  51         | Expr '[' Expr ']'
  52         | VAR IDENTIFIER

  53  Call : Receiver IDENTIFIER '(' Actuals ')'

  54  Expr : LValue
  55       | Call
  56       | Constant
  57       | Expr '+' Expr
  58       | Expr '-' Expr
  59       | Expr '*' Expr
  60       | Expr '/' Expr
  61       | Expr '%' Expr
  62       | Expr EQUAL Expr
  63       | Expr NOT_EQUAL Expr
  64       | Expr '<' Expr
  65       | Expr '>' Expr
  66       | Expr LESS_EQUAL Expr
  67       | Expr GREATER_EQUAL Expr
  68       | Expr AND Expr
  69       | Expr OR Expr
  70       | '(' Expr ')'
  71       | '-' Expr
  72       | '!' Expr
  73       | READ_INTEGER '(' ')'
  74       | READ_LINE '(' ')'
  75       | THIS
  76       | NEW IDENTIFIER '(' ')'
  77       | NEW Type '[' Expr ']'
  78       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  79       | '(' CLASS IDENTIFIER ')' Expr
  80       | Expr ARRAY_REPEAT Constant
  81       | Expr ARRAY_ADD Expr
  82       | Expr '[' Expr ':' Expr ']'
  83       | Expr '[' Expr ']' DEFAULT Expr
  84       | '[' Expr FOR IDENTIFIER IN Expr ']'
  85       | '[' Expr FOR IDENTIFIER IN Expr IF Expr ']'

  86  Constant : LITERAL
  87           | NULL
  88           | '[' ListConst ']'

  89  ListConst : Constant
  90            | ListConst ',' Constant
  91            |

  92  Actuals : ExprList
  93          |

  94  ExprList : ExprList ',' Expr
  95           | Expr

  96  WhileStmt : WHILE '(' Expr ')' Stmt

  97  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  98  BreakStmt : BREAK

  99  IfStmt : IF '(' Expr ')' Stmt ElseClause

 100  ElseClause : ELSE Stmt
 101             |

 102  ReturnStmt : RETURN Expr
 103             | RETURN

 104  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (47)
	Receiver : .  (49)

	SCOPY  shift 53
	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 54
	THIS  shift 55
	WHILE  shift 56
	FOR  shift 57
	IF  shift 58
	RETURN  shift 59
	BREAK  shift 60
	NEW  shift 61
	PRINT  shift 62
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	'{'  shift 48
	'}'  shift 72
	IDENTIFIER  reduce 49
	';'  reduce 47

	VariableDef  goto 73
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	WhileStmt  goto 78
	ForStmt  goto 79
	ReturnStmt  goto 80
	PrintStmt  goto 81
	BreakStmt  goto 82
	OCStmt  goto 83
	GuardedStmt  goto 84
	Expr  goto 85
	LValue  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 53
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (44)

	'('  shift 90
	.  error


state 54
	Constant : NULL .  (87)

	.  reduce 87


state 55
	Expr : THIS .  (75)

	.  reduce 75


state 56
	WhileStmt : WHILE . '(' Expr ')' Stmt  (96)

	'('  shift 91
	.  error


state 57
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (97)

	'('  shift 92
	.  error


state 58
	GuardedStmt : IF . '{' IfBranchList '}'  (39)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (99)

	'('  shift 93
	'{'  shift 94
	.  error


state 59
	ReturnStmt : RETURN . Expr  (102)
	ReturnStmt : RETURN .  (103)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49
	';'  reduce 103

	Expr  goto 95
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 60
	BreakStmt : BREAK .  (98)

	.  reduce 98


state 61
	Expr : NEW . IDENTIFIER '(' ')'  (76)
	Expr : NEW . Type '[' Expr ']'  (77)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 98
	.  error

	Type  goto 99


state 62
	PrintStmt : PRINT . '(' ExprList ')'  (104)

	'('  shift 100
	.  error


state 63
	Expr : READ_INTEGER . '(' ')'  (73)

	'('  shift 101
	.  error


state 64
	Expr : READ_LINE . '(' ')'  (74)

	'('  shift 102
	.  error


state 65
	Constant : LITERAL .  (86)

	.  reduce 86


state 66
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (78)

	'('  shift 103
	.  error


state 67
	LValue : VAR . IDENTIFIER  (52)

	IDENTIFIER  shift 104
	.  error


state 68
	Expr : '-' . Expr  (71)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49

	Expr  goto 105
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 69
	Expr : '!' . Expr  (72)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49

	Expr  goto 106
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 70
	Expr : '(' . Expr ')'  (70)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (79)
	Receiver : .  (49)

	CLASS  shift 107
	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49

	Expr  goto 108
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 71
	Expr : '[' . Expr FOR IDENTIFIER IN Expr ']'  (84)
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IF Expr ']'  (85)
	Constant : '[' . ListConst ']'  (88)
	Receiver : .  (49)
	ListConst : .  (91)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49
	','  reduce 91
	']'  reduce 91

	Expr  goto 109
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 110
	ListConst  goto 111


state 72
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 73
	Stmt : VariableDef .  (28)

	.  reduce 28


state 74
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 75
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 76
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 112
	.  error


state 77
	Stmt : IfStmt .  (30)

	.  reduce 30


state 78
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 79
	Stmt : ForStmt .  (32)

	.  reduce 32


state 80
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 113
	.  error


state 81
	Stmt : PrintStmt . ';'  (34)

	';'  shift 114
	.  error


state 82
	Stmt : BreakStmt . ';'  (35)

	';'  shift 115
	.  error


state 83
	Stmt : OCStmt . ';'  (37)

	';'  shift 116
	.  error


state 84
	Stmt : GuardedStmt .  (38)

	.  reduce 38


state 85
	Receiver : Expr . '.'  (48)
	LValue : Expr . '[' Expr ']'  (51)
	Expr : Expr . '+' Expr  (57)
	Expr : Expr . '-' Expr  (58)
	Expr : Expr . '*' Expr  (59)
	Expr : Expr . '/' Expr  (60)
	Expr : Expr . '%' Expr  (61)
	Expr : Expr . EQUAL Expr  (62)
	Expr : Expr . NOT_EQUAL Expr  (63)
	Expr : Expr . '<' Expr  (64)
	Expr : Expr . '>' Expr  (65)
	Expr : Expr . LESS_EQUAL Expr  (66)
	Expr : Expr . GREATER_EQUAL Expr  (67)
	Expr : Expr . AND Expr  (68)
	Expr : Expr . OR Expr  (69)
	Expr : Expr . ARRAY_REPEAT Constant  (80)
	Expr : Expr . ARRAY_ADD Expr  (81)
	Expr : Expr . '[' Expr ':' Expr ']'  (82)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (83)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
	EQUAL  shift 121
	NOT_EQUAL  shift 122
	ARRAY_REPEAT  shift 123
	ARRAY_ADD  shift 124
	'+'  shift 125
	'-'  shift 126
	'*'  shift 127
	'/'  shift 128
	'%'  shift 129
	'>'  shift 130
	'<'  shift 131
	'.'  shift 132
	'['  shift 133
	.  error


state 86
	SimpleStmt : LValue . '=' Expr  (45)
	Expr : LValue .  (54)

	'='  shift 134
	AND  reduce 54
	OR  reduce 54
	LESS_EQUAL  reduce 54
	GREATER_EQUAL  reduce 54
	EQUAL  reduce 54
	NOT_EQUAL  reduce 54
	ARRAY_REPEAT  reduce 54
	ARRAY_ADD  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	'*'  reduce 54
	'/'  reduce 54
	'%'  reduce 54
	'>'  reduce 54
	'<'  reduce 54
	'.'  reduce 54
	'['  reduce 54


state 87
	SimpleStmt : Call .  (46)
	Expr : Call .  (55)

	AND  reduce 55
	OR  reduce 55
	LESS_EQUAL  reduce 55
	GREATER_EQUAL  reduce 55
	EQUAL  reduce 55
	NOT_EQUAL  reduce 55
	ARRAY_REPEAT  reduce 55
	ARRAY_ADD  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	'%'  reduce 55
	'>'  reduce 55
	'<'  reduce 55
	'.'  reduce 55
	';'  reduce 46
	')'  reduce 46
	'['  reduce 55


state 88
	LValue : Receiver . IDENTIFIER  (50)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (53)

	IDENTIFIER  shift 135
	.  error


state 89
	Expr : Constant .  (56)

	.  reduce 56


state 90
	OCStmt : SCOPY '(' . IDENTIFIER ',' Expr ')'  (44)

	IDENTIFIER  shift 136
	.  error


state 91
	WhileStmt : WHILE '(' . Expr ')' Stmt  (96)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49

	Expr  goto 137
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 92
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (97)
	SimpleStmt : .  (47)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49
	';'  reduce 47

	SimpleStmt  goto 138
	Expr  goto 85
	LValue  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 93
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (99)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49

	Expr  goto 139
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 94
	GuardedStmt : IF '{' . IfBranchList '}'  (39)
	IfBranchList : .  (42)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49
	IF_DIV  reduce 42
	'}'  reduce 42

	IfBranchList  goto 140
	IfBranch  goto 141
	Expr  goto 142
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 95
	Receiver : Expr . '.'  (48)
	LValue : Expr . '[' Expr ']'  (51)
	Expr : Expr . '+' Expr  (57)
	Expr : Expr . '-' Expr  (58)
	Expr : Expr . '*' Expr  (59)
	Expr : Expr . '/' Expr  (60)
	Expr : Expr . '%' Expr  (61)
	Expr : Expr . EQUAL Expr  (62)
	Expr : Expr . NOT_EQUAL Expr  (63)
	Expr : Expr . '<' Expr  (64)
	Expr : Expr . '>' Expr  (65)
	Expr : Expr . LESS_EQUAL Expr  (66)
	Expr : Expr . GREATER_EQUAL Expr  (67)
	Expr : Expr . AND Expr  (68)
	Expr : Expr . OR Expr  (69)
	Expr : Expr . ARRAY_REPEAT Constant  (80)
	Expr : Expr . ARRAY_ADD Expr  (81)
	Expr : Expr . '[' Expr ':' Expr ']'  (82)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (83)
	ReturnStmt : RETURN Expr .  (102)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
	EQUAL  shift 121
	NOT_EQUAL  shift 122
	ARRAY_REPEAT  shift 123
	ARRAY_ADD  shift 124
	'+'  shift 125
	'-'  shift 126
	'*'  shift 127
	'/'  shift 128
	'%'  shift 129
	'>'  shift 130
	'<'  shift 131
	'.'  shift 132
	'['  shift 133
	';'  reduce 102


state 96
	Expr : LValue .  (54)

	.  reduce 54


state 97
	Expr : Call .  (55)

	.  reduce 55


state 98
	Expr : NEW IDENTIFIER . '(' ')'  (76)

	'('  shift 143
	.  error


state 99
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (77)

	'['  shift 144
	.  error


state 100
	PrintStmt : PRINT '(' . ExprList ')'  (104)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49

	Expr  goto 145
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89
	ExprList  goto 146


state 101
	Expr : READ_INTEGER '(' . ')'  (73)

	')'  shift 147
	.  error


state 102
	Expr : READ_LINE '(' . ')'  (74)

	')'  shift 148
	.  error


state 103
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (78)
	Receiver : .  (49)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'['  shift 71
	IDENTIFIER  reduce 49

	Expr  goto 149
	LValue  goto 96
	Call  goto 97
	Receiver  goto 88
	Constant  goto 89


state 104
	LValue : VAR IDENTIFIER .  (52)

	.  reduce 52


state 105
	Receiver : Expr . '.'  (48)
	LValue : Expr . '[' Expr ']'  (51)
	Expr : Expr . '+' Expr  (57)
	Expr : Expr . '-' Expr  (58)
	Expr : Expr . '*' Expr  (59)
	Expr : Expr . '/' Expr  (60)
	Expr : Expr . '%' Expr  (61)
	Expr : Expr . EQUAL Expr  (62)
	Expr : Expr . NOT_EQUAL Expr  (63)
	Expr : Expr . '<' Expr  (64)
	Expr : Expr . '>' Expr  (65)
	Expr : Expr . LESS_EQUAL Expr  (66)
	Expr : Expr . GREATER_EQUAL Expr  (67)
	Expr : Expr . AND Expr  (68)
	Expr : Expr . OR Expr  (69)
	Expr : '-' Expr .  (71)
	Expr : Expr . ARRAY_REPEAT Constant  (80)
	Expr : Expr . ARRAY_ADD Expr  (81)
	Expr : Expr . '[' Expr ':' Expr ']'  (82)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (83)

	'.'  shift 132
	'['  shift 133
	FOR  reduce 71
	IF  reduce 71
	AND  reduce 71
	OR  reduce 71
	LESS_EQUAL  reduce 71
	GREATER_EQUAL  reduce 71
	EQUAL  reduce 71
	NOT_EQUAL  reduce 71
	ARRAY_REPEAT  reduce 71
	ARRAY_ADD  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'*'  reduce 71
	'/'  reduce 71
	'%'  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	','  reduce 71
	';'  reduce 71
	')'  reduce 71
	']'  reduce 71
	':'  reduce 71


state 106
	Receiver : Expr . '.'  (48)
	LValue : Expr . '[' Expr ']'  (51)
	Expr : Expr . '+' Expr  (57)
	Expr : Expr . '-' Expr  (58)
	Expr : Expr . '*' Expr  (59)
	Expr : Expr . '/' Expr  (60)
	Expr : Expr . '%' Expr  (61)
	Expr : Expr . EQUAL Expr  (62)
	Expr : Expr . NOT_EQUAL Expr  (63)
	Expr : Expr . '<' Expr  (64)
	Expr : Expr . '>' Expr  (65)
	Expr : Expr . LESS_EQUAL Expr  (66)
	Expr : Expr . GREATER_EQUAL Expr  (67)
	Expr : Expr . AND Expr  (68)
	Expr : Expr . OR Expr  (69)
	Expr : '!' Expr .  (72)
	Expr : Expr . ARRAY_REPEAT Constant  (80)
	Expr : Expr . ARRAY_ADD Expr  (81)
	Expr : Expr . '[' Expr ':' Expr ']'  (82)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (83)

	'.'  shift 132
	'['  shift 133
	FOR  reduce 72
	IF  reduce 72
	AND  reduce 72
	OR  reduce 72
	LESS_EQUAL  reduce 72
	GREATER_EQUAL  reduce 72
	EQUAL  reduce 72
	NOT_EQUAL  reduce 72
	ARRAY_REPEAT  reduce 72
	ARRAY_ADD  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	'>'  reduce 72
	'<'  reduce 72
	','  reduce 72
	';'  reduce 72
	')'  reduce 72
	']'  reduce 72
	':'  reduce 72


state 107
	Expr : '(' CLASS . IDENTIFIER ')' Expr  (79)

	IDENTIFIER  shift 150
	.  error

